# orthanc-gcp

./: AUTHORS  CMakeLists.txt  NEWS  README
Plugin/: GoogleAccount.cpp  GoogleAccount.h  GoogleConfiguration.cpp  GoogleConfiguration.h  GoogleUpdater.cpp  GoogleUpdater.h  Plugin.cpp
Resources/: SyncOrthancFolder.py  debian-bullseye-compile.sh  debian-buster-compile.sh  debian-internal.sh  debian-stable-compile.sh  debian-stable-internal.sh  holy-build-box-compile.sh  holy-build-box-internal.sh
Resources/CMake/: CRC32C.cmake  GoogleCloudPlatform.cmake  NlohmannJson.cmake
Resources/Orthanc/CMake/: LibCurlConfiguration.cmake  OpenSslConfiguration.cmake
Resources/Orthanc/Sdk-1.0.0/orthanc/: OrthancCPlugin.h
Resources/Patches/: google-cloud-cpp-0.10.0.patch  google-cloud-cpp-0.9.0.patch  nlohmann-json-3.4.0.patch
